2011-01-10  Leonid Ebril  <leonid.ebril@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=51879

        Set the PluginQuirkDontSetNullWindowHandleOnDestroy for Adobe Lite
        plugin if Flash 10 or newer (for Symbian platform), setting a nulled
        window handler on destroy crashes WebKit.

        * plugins/symbian/PluginPackageSymbian.cpp:
        (WebCore::PluginPackage::fetchInfo):
        (WebCore::PluginPackage::determineQuirks):

Canonical link: https://commits.webkit.org/65737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75439 268f45cc-cd09-0410-ab3c-d52691b4dbfc